# agent-memory-evolution

./: .dvcignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EXPERIMENT_HANDOFF.md  LICENSE  README.md  outputs.dvc  pyproject.toml  vibe_check.py
.dvc/: config
Data/STATE-Bench/: .api-recon.md
baselines/: awm.py  flex.py  no_memory.py  vanilla_rag.py
docs/: README.md
docs/plans/: 2026-02-28-batch-evaluation-design.md  2026-02-28-batch-evaluation.md  2026-02-28-bind-eval-mode-to-dataset-design.md  2026-02-28-compile-fix-loop-design.md  2026-02-28-compile-fix-loop.md  2026-02-28-entrypoint-weave-design.md  2026-02-28-entrypoint-weave-plan.md  2026-02-28-run-output-artifacts.md  2026-02-28-run-output-design.md  2026-02-28-run-output-plan.md  2026-03-01-instruction-constants-design.md  2026-03-01-reflection-prompt-config.md  2026-03-01-runtime-guards-design.md  2026-03-01-runtime-guards-plan.md  2026-03-01-train-write-examples-design.md  2026-03-03-dataset-category-filtering.md  2026-03-03-pluggable-val-scorer-design.md  2026-03-03-pluggable-val-scorer-plan.md  2026-03-04-val-scorer-conversation-history-design.md  2026-03-04-val-scorer-conversation-history-plan.md  2026-03-05-knowledgeitem-summary-redesign.md  2026-03-05-observation-to-knowledge-item-rename.md  2026-03-06-irt-case-selection-plan.md  2026-03-06-population-based-parent-selection-design.md  2026-03-06-population-based-parent-selection-plan.md  (+4 more)
knowledge/: evolution-design.md  system-design-original.md
scripts/: README.md  _run_stability_remaining.sh  _run_stability_remaining2.sh  _run_stability_remaining3.sh  _run_stability_remaining4.sh  _run_stability_remaining5.sh  _run_stability_remaining6.sh  _run_stability_remaining6.sh.local  build_demo_runs.py  collect_alfworld_trajectories.py  compute_cost_table.py  rescore_llm_judge.py  run_ablation.sh  run_cross_transfer.sh  run_experiments.sh  run_gepa_baseline.py  run_smoke_ablation.sh  run_smoke_experiments.sh  run_stability.sh
seeds/: baseline.py  experience_learner.py  llm_summarizer.py  vector_search.py
seeds/single/: empty.py  (+1 more)
site/: index.html
tests/: conftest.py
web/: tailwind.config.ts  wrangler.jsonc
(+121 files in other folders)
