[build-system]
requires = ["setuptools>=77.0.1", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "programmaticmemory"
version = "0.1.0"
description = "A framework for optimizing text components using LLM-based reflection and edit-based mutation with memory stores."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "litellm>=1.81.5",
    "tenacity>=9.1.2",
    "rich>=13.0.0",
    "weave[litellm]>=0.51.0",
    "redis>=7.1.0",
    "chromadb>=1.0.0",
]

[project.optional-dependencies]
full = [
    "litellm[caching]>=1.81.5",
    "datasets>=2.14.6",
    "tqdm>=4.66.1",
    "tiktoken>=0.12.0",
]
dev = [
    "pytest",
    "pyright",
    "pre-commit",
    "ruff>=0.3.0",
    "syrupy>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
programmaticmemory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "uses_chroma: test requires a real ChromaDB EphemeralClient",
    "llm: tests that call real LLM APIs (use disk cache for replay)",
]

[tool.ruff]
include = ["src/**/*.py"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
]
ignore = [
    "B027",
    "FBT003",
    "C901",
    "E501",
    "UP035",
    "RUF005",
    "B904",
    "F403",
    "E721",
    "UP031",
    "RUF022",
    "E731",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["programmaticmemory"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "TID252",
    "ARG001",
]
"__init__.py" = ["F401"]
